--- a/database/package.json
+++ b/database/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tables": "psql -U postgres -d exampledb -f create_tables.sql"
   },
   "author": "",
   "license": "ISC"
