changed styling and started implementing database

--- a/database/package.json
+++ b/database/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tables": "psql -U postgres -d exampledb -f create_tables.sql"
+    "tables": "psql -U postgres -d exampledb -f create_tables.sql",
+    "data": "psql -U postgres -d exampledb -f create_functions.sql"
   },
   "author": "",
   "license": "ISC"
